--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&family=Yaldevi&display=swap');
 
 *{
     margin: 0;
@@ -30,8 +30,8 @@ body{
 .image-container{
     height: 21.875rem;
     width: 100%;
-    border: 10px groove;
-    border-radius: 15px;
+    border: 4px solid;
+    border-image: linear-gradient(135deg, #FF0000  0%, #080808 100%) 1;
     overflow: hidden;
 }
 
